--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         var meta = document.createElement('meta');
         meta.name = 'viewport';
-        meta.content = 'width=1200px, height=100%, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+        meta.content = 'width=100%, height=100%, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
         document.getElementsByTagName('head')[0].appendChild(meta);
         document.querySelector("#unity-container").className = "unity-mobile";
         canvas.className = "unity-mobile";
