--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
-    <div id="unity-container" style="position: absolute; width: 600px; height: 960px">
-      <canvas id="unity-canvas" width=600px height=900px 
+    <div id="unity-container" style="position: absolute; width: 690; height: 600px">
+      <canvas id="unity-canvas" width={{{ WIDTH }}} height={{{ HEIGHT }}} 
               style="width: 100%; height: 100%"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
